# feishu-webhook-bot

./: .codespell-ignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  SECURITY.md  TESTING_GUIDE.md  TESTS_IMPLEMENTATION_SUMMARY.md  config.enhanced.example.yaml  config.example.yaml  config.yaml  main.py  mkdocs.yml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  release.yml
docs/: AI_ENHANCEMENTS.md  AI_MULTI_PROVIDER_GUIDE.md  MCP_INTEGRATION.md  api.md  authentication.md  automation-guide.md  contributing.md  enhanced-yaml-features.md  getting-started.md  index.md  plugin-guide.md  yaml-configuration-guide.md
docs/ai/: commands.md  conversation-store.md  enhancements.md  mcp-integration.md  multi-provider.md  tools.md
docs/deployment/: deployment.md  docker.md
docs/getting-started/: first-steps.md  installation.md  quickstart.md
docs/guides/: advanced-yaml-features.md  automation-guide.md  chat-controller-guide.md  configuration-reference.md  enhanced-yaml-features.md  event-handling.md  message-types.md  plugin-guide.md  providers-guide.md  scheduler-guide.md  tasks-guide.md  templates-guide.md  webui-guide.md  yaml-configuration-guide.md
docs/reference/: api.md  cli-reference.md  core-reference.md  error-codes.md
docs/resources/: changelog.md  contributing.md  examples.md  faq.md  migration.md  troubleshooting.md
docs/security/: authentication.md  security-best-practices.md
examples/: CORE_MODULES.md  README.md  ai_capabilities_demo.py  ai_features_demo.py  ai_tasks_config.yaml  auth_demo.py  auth_example.py  automation_demo.py  complete_mcp_bot_example.py  event_server_demo.py  mcp_integration_example.py  mcp_transport_examples.py  multi_provider_ai_example.py  plugin_demo.py  quickstart.py  scheduler_demo.py
examples/ai/: __init__.py  ai_agent_advanced_example.py  ai_bot_config.yaml  ai_bot_example.py  ai_powered_tasks_example.py  ai_retry_example.py  ai_tasks_config.yaml  conversation_manager_example.py  multi_agent_example.py  tool_registry_example.py
examples/auth/: __init__.py  auth_advanced_demo.py  auth_api_demo.py
examples/automation/: __init__.py
examples/client/: __init__.py  card_builder_example.py  rich_text_example.py
examples/core/: __init__.py  circuit_breaker_example.py  config_validation_example.py  config_watcher_example.py  event_server_demo.py  image_uploader_example.py  logging_example.py  message_queue_example.py  message_tracker_example.py  message_tracker_usage.py
examples/mcp/: __init__.py  complete_mcp_bot_example.py  mcp_tool_discovery_example.py  mcp_transport_examples.py
examples/plugins/: __init__.py  feishu_calendar_config.yaml  plugin_config_schema_example.py  plugin_demo.py  plugin_dependency_example.py  plugin_manifest_example.py  plugin_permissions_example.py  plugin_sandbox_example.py  plugin_setup_wizard_example.py  rss_subscription_example.py  use_calendar_plugin.py
examples/providers/: __init__.py  feishu_provider_example.py  multi_provider_example.py  qq_napcat_provider_example.py
examples/quickstart/: __init__.py  basic_bot_example.py  quickstart.py  simple_message_example.py
examples/scheduler/: __init__.py  task_manager_demo.py
plugins/: daily_greeting.py  example_plugin.py  reminder.py  system_monitor.py
scripts/: task.ps1  task.sh  tasks.py
src/feishu_webhook_bot/: __init__.py  bot.py  cli.py  config_ui.py
src/python_quick_starter/: __init__.py  cli.py
tests/: README.md  __init__.py  conftest.py  test_ai_capabilities.py  test_auth.py  test_bot.py  test_cli.py  test_client.py  test_config.py  test_config_watcher.py  test_environment_config.py  test_integration.py  test_logger.py  test_plugin_config.py  test_plugins.py  test_scheduler.py  test_task_executor.py  test_task_manager.py  test_task_templates.py  test_validation.py
tests/ai/: test_agent.py  test_ai_capabilities.py  test_ai_features.py  test_ai_integration.py  test_ai_task_integration.py  test_commands.py  test_config.py  test_conversation.py  test_conversation_store.py  test_exceptions.py  test_integration.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_tool_discovery.py  test_multi_agent.py  test_persona.py  test_retry.py  test_search.py  test_task_integration.py  test_tools.py
tests/auth/: test_auth.py  test_database.py  test_middleware.py  test_models.py  test_routes.py  test_security.py  test_service.py  test_ui.py
tests/automation/: test_actions.py  test_engine.py  test_triggers.py  test_workflow.py
tests/bot/: test_bot.py
tests/chat/: test_controller.py
tests/cli/: test_cli.py  test_cli_ai_task_commands.py  test_new_commands.py
tests/config_ui/: test_config_ui.py
tests/core/: test_circuit_breaker.py  test_circuit_breaker_root.py  test_client.py  test_config.py  test_config_root.py  test_config_watcher.py  test_environment_config.py  test_event_server.py  test_image_uploader.py  test_image_uploader_root.py  test_logger.py  test_logger_root.py  test_message_bridge.py  test_message_handler.py  test_message_parsers.py  test_message_queue.py  test_message_queue_root.py  test_message_tracker.py  test_message_tracker_root.py  test_provider.py  test_templates.py  test_validation.py
tests/fixtures/: invalid_schema.yaml  invalid_syntax.yaml  minimal_config.yaml  valid_config.yaml
tests/integration/: test_integration.py
tests/mocks/: __init__.py  mock_plugin.py  mock_scheduler.py
tests/plugins/: __init__.py  test_base.py  test_base_plugin.py  test_config.py  test_config_registry.py  test_config_schema.py  test_config_updater.py  test_config_validator.py  test_dependency_checker.py  test_feishu_calendar.py  test_manager.py  test_manifest.py  test_permissions.py  test_plugins.py  test_rss_subscription.py  test_sandbox.py  test_setup_wizard.py
tests/providers/: __init__.py  test_base_http.py  test_common.py  test_feishu_api.py  test_feishu_signature.py  test_feishu_webhook.py  test_multi_provider.py  test_providers.py  (+6 more)
(+238 files in other folders)
