[project]
name = "feishu-webhook-bot"
version = "0.1.0"
description = "A minimal Feishu (Lark) Webhook bot template demonstrating receiving and handling Feishu webhook events."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["template", "python", "uv", "pytest", "ruff", "black"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AstroAir/feishu-webhook-bot"
Repository = "https://github.com/AstroAir/feishu-webhook-bot.git"
Issues = "https://github.com/AstroAir/feishu-webhook-bot/issues"

[project.scripts]
feishu-webhook-bot = "python_quick_starter.cli:main"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_quick_starter"]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
exclude = ["tests/"]
