[project]
name = "feishu-webhook-bot"
version = "0.1.0"
description = "A production-ready Feishu (Lark) webhook bot framework with messaging, scheduling, plugins, and hot-reload capabilities."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["feishu", "lark", "webhook", "bot", "framework", "scheduler", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "ruamel.yaml>=0.18.0",
    "watchdog>=5.0.0",
    "python-dotenv>=1.0.0",
    "packaging>=23.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "nicegui>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.44",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.3.0",
    "slowapi>=0.1.9",
    "pydantic-ai[mcp]>=1.12.0",
    "duckduckgo-search>=8.1.1",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
]

[project.urls]
Homepage = "https://github.com/AstroAir/feishu-webhook-bot"
Repository = "https://github.com/AstroAir/feishu-webhook-bot.git"
Issues = "https://github.com/AstroAir/feishu-webhook-bot/issues"

[project.scripts]
feishu-webhook-bot = "feishu_webhook_bot.cli:main"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_webhook_bot"]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "pre-commit>=4.0",
    "pytest-httpx>=0.32.0",
    "types-python-dateutil>=2.9.0.20251108",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Allow function calls in default arguments (FastAPI Depends pattern)

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["tests/", "examples/", "plugins/"]
